Create CoronaTweet object

--- a/CollectionsPerformanceTest.csproj
+++ b/CollectionsPerformanceTest.csproj
@@ -43,11 +43,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Business\CoronaTweet.cs" />
+    <Compile Include="Business\Iterator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="archive.zip" />
+    <None Include="archive\Corona_NLP_test.csv" />
+    <None Include="archive\Corona_NLP_train.csv" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
