Performance test OK

--- a/CollectionsPerformanceTest.csproj
+++ b/CollectionsPerformanceTest.csproj
@@ -59,10 +59,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Business\TweetSentimentFilter.cs" />
+    <Compile Include="Iterator\ArrayListOfTweets.cs" />
+    <Compile Include="Iterator\ListOfTweets.cs" />
+    <Compile Include="Iterator\ArrayOfTweets.cs" />
     <Compile Include="Iterator\EnumerableTweets.cs" />
     <Compile Include="Iterator\EnumeratorTweets.cs" />
-    <Compile Include="LoopTest.cs" />
-    <Compile Include="TweetFilter.cs" />
+    <Compile Include="Business\LoopTest.cs" />
+    <Compile Include="Business\TweetFilter.cs" />
     <Compile Include="Models\Tweet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
