--- a/CollectionsPerformanceTest.csproj
+++ b/CollectionsPerformanceTest.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Business\CSVReader.cs" />
     <Compile Include="Business\TweetSentimentFilter.cs" />
     <Compile Include="Iterator\TweetsArrayList.cs" />
     <Compile Include="Iterator\TweetsSortedListWithKeyValue.cs" />
@@ -90,8 +91,16 @@
     <None Include="archive.zip" />
     <None Include="archive\Corona_NLP_test.csv" />
     <None Include="archive\Corona_NLP_train.csv" />
+    <None Include="archive\FIFA.csv" />
+    <None Include="archive\FIFA.csv.zip" />
+    <None Include="archive\olist_geolocation_dataset.csv" />
+    <None Include="archive\olist_geolocation_dataset.csv.zip" />
+    <None Include="archive\out.csv" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="archive\.gitignore" />
+    <Content Include="archive\Preprocessing.py" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
