added another ways to open a CSV. moving some files to specific dir

--- a/CollectionsPerformanceTest.csproj
+++ b/CollectionsPerformanceTest.csproj
@@ -58,30 +58,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Business\CSVReader.cs" />
-    <Compile Include="Business\TweetSentimentFilter.cs" />
-    <Compile Include="Iterator\TweetsArrayList.cs" />
-    <Compile Include="Iterator\TweetsSortedListWithKeyValue.cs" />
-    <Compile Include="Iterator\TweetsSortedList.cs" />
-    <Compile Include="Iterator\TweetsSortedDictionary.cs" />
-    <Compile Include="Iterator\TweetsOrderedDictionary.cs" />
-    <Compile Include="Iterator\TweetsListDictionary.cs" />
-    <Compile Include="Iterator\TweetsHashtable.cs" />
-    <Compile Include="Iterator\TweetsIDictionary.cs" />
-    <Compile Include="Iterator\TweetsIReadOnlyList.cs" />
-    <Compile Include="Iterator\TweetsIList.cs" />
-    <Compile Include="Iterator\TweetsICollection.cs" />
-    <Compile Include="Iterator\TweetsIEnum.cs" />
-    <Compile Include="Iterator\TweetsHashSet .cs" />
-    <Compile Include="Iterator\TweetsStack.cs" />
-    <Compile Include="Iterator\TweetsQueue.cs" />
-    <Compile Include="Iterator\TweetsLinkedList.cs" />
-    <Compile Include="Iterator\TweetsList.cs" />
-    <Compile Include="Iterator\TweetsArray.cs" />
-    <Compile Include="Iterator\IEnumerableEnumerator\TweetsEnumerable.cs" />
-    <Compile Include="Iterator\IEnumerableEnumerator\TweetsEnumerator.cs" />
-    <Compile Include="Business\LoopRepository.cs" />
-    <Compile Include="Business\TweetsIterator.cs" />
+    <Compile Include="Business\CSVManager.cs" />
+    <Compile Include="Iterator\KindsOfIterator\TweetsArrayList.cs" />
+    <Compile Include="Iterator\KindsOfIterator\TweetsSortedListWithKeyValue.cs" />
+    <Compile Include="Iterator\KindsOfIterator\TweetsSortedList.cs" />
+    <Compile Include="Iterator\KindsOfIterator\TweetsSortedDictionary.cs" />
+    <Compile Include="Iterator\KindsOfIterator\TweetsOrderedDictionary.cs" />
+    <Compile Include="Iterator\KindsOfIterator\TweetsListDictionary.cs" />
+    <Compile Include="Iterator\KindsOfIterator\TweetsHashtable.cs" />
+    <Compile Include="Iterator\KindsOfIterator\TweetsIDictionary.cs" />
+    <Compile Include="Iterator\KindsOfIterator\TweetsIReadOnlyList.cs" />
+    <Compile Include="Iterator\KindsOfIterator\TweetsIList.cs" />
+    <Compile Include="Iterator\KindsOfIterator\TweetsICollection.cs" />
+    <Compile Include="Iterator\KindsOfIterator\TweetsIEnum.cs" />
+    <Compile Include="Iterator\KindsOfIterator\TweetsHashSet .cs" />
+    <Compile Include="Iterator\KindsOfIterator\TweetsStack.cs" />
+    <Compile Include="Iterator\KindsOfIterator\TweetsQueue.cs" />
+    <Compile Include="Iterator\KindsOfIterator\TweetsLinkedList.cs" />
+    <Compile Include="Iterator\KindsOfIterator\TweetsList.cs" />
+    <Compile Include="Iterator\KindsOfIterator\TweetsArray.cs" />
+    <Compile Include="Iterator\KindsOfIterator\IEnumerableEnumerator\TweetsEnumerable.cs" />
+    <Compile Include="Iterator\KindsOfIterator\IEnumerableEnumerator\TweetsEnumerator.cs" />
+    <Compile Include="Business\LoopManager.cs" />
+    <Compile Include="Iterator\TweetsIterator.cs" />
     <Compile Include="Models\Tweet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
